--- a/css/index-Body.css
+++ b/css/index-Body.css
@@ -1,6 +1,3 @@
-body{
-    /* width: 100%; */
-}
 .beginning{
     background-color: #f2f7f8;
     margin-top: 100px;
@@ -12,7 +9,8 @@ body{
     /* border: thick solid blue; */
     width: 100%;
     position: relative;
-    margin-bottom: 100px;
+    padding-bottom: 100px;
+    left: 0px;
     /* margin-inline: auto; */
     /* padding-inline: 10%; */
     /* z-index: 2; */
@@ -23,19 +21,27 @@ body{
     margin-inline: auto;
     /* border: thick solid green; */
     display: flex;
+    justify-content: space-between;
+    /* gap: 30%; */
 }
 .beginning .text{
-    width: 600px;
+    width: 100%;
+    flex-wrap: wrap;
     /* border: thin solid red; */
 }
 .beginning .link{
     /* z-index: 2; */
+    /* width: 100%; */
     color: white;
     padding-block: 15px;
     padding-inline: 8px;
     background-color: #0089ff;
     border-radius: 30px;
     text-decoration: none;
+    border: none;
+    font-size: 16px;
+    font-weight: 600;
+    line-height: 27px;
 }
 .beginning .link:hover {
     background-color: #122231;
@@ -67,7 +73,7 @@ body{
 }
 .beginning .text div{
     margin-top: 30px;
-    max-width: 414.7px;
+    width: 75%;
     flex-wrap: wrap;
     /* border: thin solid black; */
     padding: 0.2rem;
@@ -100,69 +106,128 @@ body{
     max-width: 170px;
     color: #f2f7f8;
 }
+.beginning div #store{
+    /* width: 80%; */
+}
 .beginning .images{
     /* display: flex;
     justify-content: right;
     text-align: right; */
-    position: relative;
+    /* position: relative; */
     animation: bounce 2s ease-in-out infinite alternate;
     /* border: thin solid black; */
+    width: 100%;
+
+    display: flex;
+    text-align: center;
+    /* justify-content: end; */
+    align-items: end;
 }
-.beginning .images>.container{
+.beginning .images .container{
     position: relative;
+    /* border: thin solid aqua; */
+    width: 90%;
+    height: 100%;
+    margin-inline: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 @keyframes bounce {
     to{transform: translateY(-20px);}
 }
 .beginning .images .container>img{
-    width: 500px;
-    /* position: relative; */
+    width: 90%;
+    position: relative;
 }
 .beginning .images div img{
     /* position: absolute; */
-    width: 210px;
+    /* width: 50%; */
 }
-.beginning .images .container div{
+.beginning .images .container .inner{
     position: absolute;
-    top: 0;
-    height: 520px;
-    width: 500px;
+    /* top: 0; */
+    /* right: 0; */
+    height: 70%;
+    width: 90%;
     /* border: thick solid yellow; */
+    /* display: flex; */
+    /* text-align: right; */
+    /* align-items: end; */
+    /* justify-content: flex-end; */
+    /* text-align: right; */
 }
 .beginning .images div .one{
     position: absolute;
-    top: 65px;
-    left: -60px;
+    top: 0%;
+    left: -20%;
+    width: 47%;
+    /* height: 16%; */
 }
 .beginning .images div .two{
     position: absolute;
-    top: 220px;
-    left: -60px;
-    width: 200px;
+    top:43%;
+    left: -20%;
+    width: 40%;
 }
 .beginning .images div .three{
     position: absolute;
-    bottom: 60px;
-    left: -60px;
-    width: 180px;
+    bottom: -5%;
+    left: -20%;
+    width: 37%;
 }
 .beginning .images div .four{
     position: absolute;
-    top: 40px;
-    right: -50px;
-    width: 230px;
+    top: -2%;
+    right: -16%;
+    width: 52%;
 }
 .beginning .images div .five{
     position: absolute;
-    top: 270px;
-    right: -40px;
-    width: 210px;
+    top: 56%;
+    right: -16%;
+    width: 51%;
 }
 .beginning .images div .six{
     position: absolute;
-    bottom: -16px;
-    right: -32px;
-    /* width: 200px; */
+    bottom: -28%;
+    right: -16%;
+    width: 50%;
+}
+
+.security{
+    background-color: #f2f7f8;
+    position: relative;
+}
+.security>div{
+    width: 85%;
+    margin-inline: auto;
+    display: flex;
+    gap: 20px;
+}
+.security>div>div{
+    max-width: 690px;
+    font-size: 16px;
+    line-height: 27.2px;
+    font-weight: 400;
+}
+.security>div>div h5{
+    font-size: 24px;
+    line-height: 32px;
+    font-weight: 700;
+}
+.security>div>div p {
+    margin-block: 20px;
+    margin-bottom: 15px;
+}
+.security>div>div a{
+    font-weight: 600;
+    color: #122231;
+    text-decoration: none;
+}
+.security>div>div .arrow{
+    font-size: 27px;
+    padding-right: 5px;
 }
 
 
@@ -173,24 +238,35 @@ body{
 
 
 
-@media (max-width: 1248px) {
-    .beginning{
-        /* min-width: 100%; */
+
+
+
+
+
+
+@media (max-width: 1185px) {
+    .beginning .images .container .inner{
+    position: absolute;
+    /* top: 0; */
+    /* right: 0; */
+    height: 45%;
+    width: 90%;
     }
 }
 
-@media (max-width: 1154px) {
+@media (max-width: 1023px) {
     .beginning>div{
         display: block;
-        /* width: 100%; */
+        width: 90%;
         /* margin-right: 0; */
     }
     .beginning .text{
         margin-inline: auto;
         text-align: center;
+        width: 100%;
     }
     .beginning .text div{
-        max-width: 100%;
+        width: 100%;
         text-align: center;
         padding-inline: auto;
         display: flex;
@@ -204,15 +280,16 @@ body{
         justify-content: center;
         /* margin-inline: auto; */
     }
-
-}
-@media (max-width:725px) {
-    .beginning .text{
-        width: 100%;
+    .beginning .images .container .inner{
+        height: 70%;
     }
-}
-@media (max-width:593px) {
-    .beginning{
-        min-width: 150%;
+
+    .security>div{
+        display: block;
+        text-align: center;
+    }
+    .security>div>div{
+        max-width: 70%;
+        margin-inline: auto;
     }
 }
