--- a/css/index-Body.css
+++ b/css/index-Body.css
@@ -33,8 +33,8 @@
     /* z-index: 2; */
     /* width: 100%; */
     color: white;
-    padding-block: 15px;
-    padding-inline: 8px;
+    padding-block: 2%;
+    padding-inline: 1%;
     background-color: #0089ff;
     border-radius: 30px;
     text-decoration: none;
@@ -42,6 +42,8 @@
     font-size: 16px;
     font-weight: 600;
     line-height: 27px;
+    display: flex;
+    /* align-items: center; */
 }
 .beginning .link:hover {
     background-color: #122231;
@@ -69,7 +71,7 @@
     animation: spin 2s linear infinite;
 }
 @keyframes spin {
-    to {transform: rotate(360deg);}
+    to {transform: rotate(180deg);}
 }
 .beginning .text div{
     margin-top: 30px;
@@ -230,6 +232,310 @@
     padding-right: 5px;
 }
 
+.savings{
+    background-color: #f2f7f8;
+    padding-block: 120px;
+}
+.savings .inner{
+    width: 70%;
+    /* border:  thin solid red; */
+    margin-inline: auto;
+    /* display: flex;
+    flex-direction: column;
+    align-items: center; */
+    /* padding-inline: auto; */
+    /* margin-block: 80px; */
+}
+.savings .inner .text{
+    display: flex;
+    flex-direction: column;
+    /* justify-content: center; */
+    align-items: center;
+    text-align: center;
+    font-size: 24px;
+    line-height: 35px;
+    font-weight: 400;
+    /* border: thick solid black; */
+}
+.savings .inner .text h3{
+    font-size: 42px;
+    line-height: 66px;
+}
+.savings .inner .boxes{
+    display: grid;
+    width: 100%;
+    /* height: 100%; */
+    grid-template-columns: repeat(2, 1fr);
+    gap: 2rem;
+    margin-top: 50px;
+    justify-content: space-between;
+    /* position: relative; */
+}
+.savings .inner .boxes>div{
+    /* width: 40%; */
+    /* height: 400px; */
+    /* border:  thin solid black; */
+    cursor: pointer;
+    padding: 2rem 1rem;
+    /* position: relative; */
+    font-size: 36px;
+    font-weight: 700;
+    line-height: 42px;
+    background-color: white;
+    transition: background-color 0.5s ease-in-out;
+    border-radius: 20px;
+}
+.savings .inner .boxes .item:hover{
+    color: #f2f7f8;
+}
+.savings .inner .boxes .one:hover{
+    background-color: rgb(15, 95, 214);
+}
+.savings .inner .boxes .one h3{
+    color: #003399;
+}
+.savings .inner .boxes .item:hover h3{
+    color: #f2f7f8;
+}
+.savings .inner .boxes .item:hover a{
+    color: #f2f7f8;
+}
+.savings .inner .boxes .item h3{
+    font-size: 36px;
+}
+.savings .inner .boxes .one a{
+    color: #003399;
+    font-weight: 700;
+}
+.savings .inner .boxes>div>.top{
+    width: 70%;
+    font-size: 19px;
+    font-weight: 400;
+    line-height: 28px;
+    margin-top: 20px;
+}
+.savings .inner .boxes>div>.down{
+    display: flex;
+    justify-content: space-between;
+    /* align-items: end; */
+    align-items: end;
+    font-size: 16px;
+}
+.savings .inner .boxes>div>.down a{
+    text-decoration: none;
+}
+.savings .inner .boxes>div>.down a:hover{
+    text-decoration: underline;
+    text-underline-offset: 5px;
+    text-decoration-thickness: 7px;
+    /* color: #f2f7f8; */
+}
+.savings .inner .boxes>div img{
+    width: 50%;
+    transform: scale(0);
+    transform-origin: right bottom;
+    transition: transform 0.5s ease-in-out;
+}
+.savings .inner .boxes>div:hover img{
+    transform: scale(1);
+}
+.savings .inner .boxes .two h3{
+    color: #3296ff;
+}
+.savings .inner .boxes .two a{
+    color: #3296ff;
+    font-weight: 700;
+}
+.savings .inner .boxes .two:hover{
+    background-color: #3296ff;
+}
+
+.savings .inner .boxes .three h3{
+    color: #069b40;
+}
+.savings .inner .boxes .three a{
+    color: #069b40;
+    font-weight: 700;
+}
+.savings .inner .boxes .three:hover{
+    background-color: #39c277;
+}
+
+.savings .inner .boxes .four h3{
+    color: #e4228e;
+}
+.savings .inner .boxes .four a{
+    color: #e4228e;
+    font-weight: 700;
+}
+.savings .inner .boxes .four:hover{
+    background-color: #e5489b;
+}
+
+.savings .inner .boxes .two h3{
+    /* color: #3296ff; */
+}
+.savings .inner .boxes .five a{
+    color: #0c1825;
+    font-weight: 700;
+}
+.savings .inner .boxes .five:hover{
+    background-color: #0c1825;
+}
+
+.savings .inner .boxes .six h3{
+    color: #ff783c;
+}
+.savings .inner .boxes .six a{
+    color: #ff783c;
+    font-weight: 700;
+}
+.savings .inner .boxes .six:hover{
+    background-color: #ff783c;
+}
+
+
+.invest{
+    width: 100%;
+    padding-block: 120px;
+}
+.invest .top{
+    width: 85%;
+    margin-inline: auto;
+    text-align: center;
+    margin-block: 70px;
+}
+.invest .top h2{
+    font-size: 51px;
+    /* font-weight: 700; */
+    /* line-height: 64px; */
+}
+.invest .top p{
+    margin-top: 10px;
+    font-size: 24px;
+    font-weight: 400;
+    /* line-height: 33px; */
+}
+.invest .inner{
+    width: 85%;
+    margin-inline: auto;
+    background-color: #7913e5;
+    border-radius: 30px;
+    /* height: 500px; */
+    padding-top: 60px;
+    padding-inline: 4rem;
+    display: flex;
+    justify-content: space-between;
+    /* border: thick solid brown; */
+}
+.invest .inner .text h3{
+    font-size: 36px;
+    font-weight: 700;
+    color: #f2f7f8;
+}
+.invest .inner .text a{
+    font-size: 16px;
+    font-weight: 600;
+    color: #f2f7f8;
+    text-decoration: none;
+}
+.invest .inner .text .small{
+    margin-top: 30px;
+    width: 50%;
+    font-size: 20px;
+    line-height: 28px;
+    font-weight: 400;
+    color: #ffe0f1;
+    /* border: thin solid red; */
+}
+.invest .inner .text .down{
+    display: flex;
+    align-items: end;
+    /* border: thin solid green; */
+    margin-top: 25%;
+    /* position: relative;
+    bottom: -30%; */
+}
+.invest .inner .image{
+    /* border: thin solid black; */
+    width: 85%;
+    display: flex;
+    align-items: end;
+}
+.invest .inner .image img{
+    width: 100%;
+}
+
+
+.saver{
+    width: 100%;
+    background-color: #f2f7f8;
+    padding-block: 120px;
+}
+.saver .top{
+    text-align: center;
+    font-size: 24px;
+    font-weight: 400;
+    line-height: 33px;
+    /* border: thin solid green; */
+    width: 60%;
+    margin-inline: auto;
+}
+.saver .top h3{
+    font-size: 48px;
+    font-weight: 700;
+    line-height: 64px;
+    margin-bottom: 13px;
+}
+.saver .top iframe{
+    width: 100%;
+    height: 450px;
+    border-radius: 20px;
+    margin-top: 60px;
+}
+.saver .bottom{
+    width: 85%;
+    margin-inline: auto;
+    display: flex;
+    align-items: center;
+    margin-top: 200px;
+    /* border: thin solid yellow; */
+}
+.saver .bottom>img{
+    width: 40%;
+}
+.saver .bottom div{
+    width: 50%;
+    margin-left: 5%;
+    font-size: 33px;
+    font-weight: 700;
+    line-height: 41px;
+    margin-right: 10%;
+    /* border: thin solid blue; */
+}
+.saver .bottom div h4{
+    margin-bottom: 20px;
+}
+.saver .bottom div a{
+    font-size: 13px;
+    font-weight: 600;
+    line-height: 27px;
+    border: thin solid #dbdada;
+    border-radius: 10px;
+    padding: 13px;
+    margin-right: 10px;
+    text-decoration: none;
+    color: #122231;
+    /* display: flex; */
+    /* flex-direction: column; */
+    /* vertical-align: middle; */
+    /* align-items: center; */
+    /* justify-content: center; */
+}
+.saver .bottom div img{
+    vertical-align: middle;
+    margin-right: 5px;
+}
 
 
 
@@ -244,6 +550,16 @@
 
 
 
+
+
+
+
+
+@media (max-width: 1344px) {
+    .invest .inner .text .down{
+        margin-block: 9%;
+    }
+}
 @media (max-width: 1185px) {
     .beginning .images .container .inner{
     position: absolute;
@@ -258,12 +574,19 @@
     .beginning>div{
         display: block;
         width: 90%;
+        text-align: center;
         /* margin-right: 0; */
+    }
+    .beginning .link{
+        /* align-self: center; */
+        font-size: 14px;
     }
     .beginning .text{
         margin-inline: auto;
         text-align: center;
         width: 100%;
+        display: flex;
+        justify-content: center;
     }
     .beginning .text div{
         width: 100%;
@@ -274,11 +597,13 @@
     }
     .beginning .images{
         margin-top: 70px;
-        animation: none;
+        /* animation: none; */
         /* text-align: center; */
         display: flex;
         justify-content: center;
-        /* margin-inline: auto; */
+        margin-inline: auto;
+        width: 90%;
+        /* marg-in-inline: auto; */
     }
     .beginning .images .container .inner{
         height: 70%;
@@ -289,7 +614,84 @@
         text-align: center;
     }
     .security>div>div{
-        max-width: 70%;
+        max-width: 80%;
         margin-inline: auto;
+    }
+    .savings .inner{
+        width: 80%;
+    }
+    .savings .inner .boxes{
+        grid-template-columns: repeat(1, 1fr);
+    }
+    .savings .inner .boxes>div>.top{
+        width: 100%;
+    }
+    .savings .inner .boxes .item{
+        /* display: flex; */
+        /* flex-direction: column; */
+        text-align: center;
+        /* width: 90%; */
+    }
+    .savings .inner .boxes .item a{
+        font-size: 14px;
+    }
+    .invest .inner{
+        width: 90%;
+        display: block;
+        padding-inline: 0.5rem;
+        text-align: center;
+    }
+    .invest .top{
+        width: 90%;
+    }
+    .invest .top h2{
+        font-size: 30px;
+    }
+    .invest .top p{
+        font-size: 18px;
+    }
+    .invest .inner h3{
+        font-size: 30px;
+    }
+    .invest .inner .text .small{
+        width: 100%;
+    }
+    .invest .inner .text .down{
+        /* text-align: center; */
+        display: flex;
+        justify-content: center;
+    }
+    .invest .inner .image{
+        margin-inline: auto;
+    }
+    .saver .top{
+        width: 85%;
+    }
+    .saver .bottom{
+        flex-direction: column-reverse;
+        /* margin-top: 100px; */
+    }
+    .saver .bottom>img{
+        width: 90%;
+        margin-top: 40px;
+    }
+    .saver .bottom div{
+        width: 100%;
+        margin-inline: auto;
+        text-align: center;
+    }
+    .saver .bottom div a{
+        display: block;
+        margin-inline: auto;
+        margin-top: 20px;
+    }
+}
+
+
+@media (max-width: 345px){
+    .beginning .left{
+        animation: none;
+        align-items: center;
+        /* vertical-align: middle; */
     }
 }
