--- a/css/header.css
+++ b/css/header.css
@@ -97,7 +97,10 @@ header .dropdownContent{
     position: absolute;
     /* left: 300px; */
     border-radius: 8px;
-    width: 500px;
+    width: 32rem;
+    padding-bottom: 30px;
+    /* margin-right: 100px; */
+    /* border: thick solid red; */
 }
 header .dropdown:hover .dropdownContent{
     display: flex;
@@ -168,10 +171,14 @@ header .btn2{
 
 
 
-@media (max-width: 1118px) {
+@media (max-width: 1000px) {
+    header{
+        /* border: thick solid red; */
+        overflow-wrap: break-word;
+    }
     header .menu-icon{
         display: block;
-        z-index: 3;
+        z-index: 1000;
     }
     header nav{
         /* background-color: green; */
@@ -180,23 +187,29 @@ header .btn2{
         width: 95%;
         align-items: normal;
         padding-top: 20px;
+        /* border: thick solid red; */
     }
     header .removeable{
         display: none;
         flex-direction: column;
         position: absolute;
-        top: 40px;
+        top: 59px;
         left: 0;
-        width: 100vw;
+        width: 100%;
         height: 100vh;
         background-color: #f2f7f8;
         align-items: center;
         /* justify-content: center; */
-        padding-top: 200px;
+        padding-top: 80px;
         /* padding-inline: auto; */
-        z-index: 2;
+        z-index: 1000;
         gap: 40px;
         font-size: 18px;
+        /* display: flex; */
+        /* align-items: start; */
+        /* justify-content: start; */
+        /* border: thick solid red; */
+        overflow-y: scroll;
     }
     #menu:checked ~.removeable{
         display: flex;
@@ -211,6 +224,7 @@ header .btn2{
         flex-direction: column;
         width: 90%;
         gap: 20px;
+        /* border: thick solid red; */
     }
     header .navEnd button{
         /* text-align: center; */
@@ -218,6 +232,10 @@ header .btn2{
         justify-content: center;
     }
     header .dropdown:hover .dropdownContent{
-        display: none;
+        /* display: none; */
+        position: relative;
+        display: block;
+        width: 60%;
+        overflow-wrap: break-word;
     }
 }
